--- a/index.html
+++ b/index.html
@@ -1,103 +1,87 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Evasion Authentic</title>
-  <link rel="icon" href="assets/favicon.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <link rel="stylesheet" href="css/style.css"/>
-</head>
+
+<!DOCTYPE html><html lang="fr"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Evasion Authentic</title>
+<link rel="icon" href="assets/favicon.png" type="image/png">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<link rel="stylesheet" href="css/style.css"/></head>
 <body>
-<header class="topbar">
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Evasion Authentic" class="logo"/>
-  </div>
-  <button class="burger" aria-label="menu" id="burger">☰</button>
-  <nav id="nav" class="nav">
-    <a href="#accueil" data-tab="accueil" class="active">Accueil</a>
-    <a href="#lieux" data-tab="lieux">Lieux</a>
-    <a href="#marches" data-tab="marches">Marchés</a>
-    <a href="#fetes" data-tab="fetes">Fêtes</a>
-    <a href="#roadtrips" data-tab="roadtrips">Road trips</a>
-    <a href="#excursions" data-tab="excursions">Excursions</a>
-    <a href="#conciergerie" data-tab="conciergerie">Conciergerie</a>
-  </nav>
-</header>
+<header class="topbar"><div class="brand"><img src="assets/logo.svg" class="logo" alt="Evasion Authentic"/></div>
+<button class="burger" id="burger" aria-label="menu">☰</button>
+<nav id="nav" class="nav">
+  <a href="#accueil" data-tab="accueil" class="active">Accueil</a>
+  <a href="#lieux" data-tab="lieux">Lieux</a>
+  <a href="#marches" data-tab="marches">Marchés</a>
+  <a href="#roadtrips" data-tab="roadtrips">Road trips</a>
+  <a href="#excursions" data-tab="excursions">Excursions</a>
+  <a href="#fetes" data-tab="fetes">Fêtes</a>
+  <a href="#conciergerie" data-tab="conciergerie">Conciergerie</a>
+</nav></header>
 
 <main>
-  <section id="accueil" class="view active">
-    <div class="hero">
-      <img src="assets/photos/Palma-de-Mallorca-et-sa-cathedrale-9.jpg" alt="Palma et sa cathédrale"/>
-      <div class="hero-text">
-        <h1>Majorque, version authentique</h1>
-        <p>Road trips détaillés, plus belles plages, points de vue, bonnes adresses. Conciergerie gratuite.</p>
-        <a class="cta" href="#roadtrips">Voir les road trips</a>
-      </div>
+<section id="accueil" class="view active">
+  <div class="intro">
+    <h1>Majorque sans efforts, version authentique</h1>
+    <p>Road trips clés en main, cartes interactives, plus belles plages, points de vue, bonnes adresses. Marchés par jour (sur carte) et fêtes locales expliquées.</p>
+    <p><strong>Conciergerie gratuite</strong> pour toutes vos réservations (voilier 5h, cheval, quad, jet‑ski, montgolfière, dégustations, dauphins…). Un seul WhatsApp.</p>
+    <div class="links">
+      <a class="cta" href="#roadtrips">Voir les road trips</a>
+      <a class="cta ghost" href="#lieux">Explorer la carte & lieux</a>
+      <a class="cta ghost" href="#excursions">Nos excursions premium</a>
+      <a class="cta ghost" href="#conciergerie">Conciergerie gratuite</a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="lieux" class="view">
-    <div class="grid two">
-      <div id="map"></div>
-      <div>
-        <input id="global-search" placeholder="Rechercher un lieu, une plage, un village…"/>
-        <div id="search-results" class="cards"></div>
-        <h2 class="mt">Lieux à découvrir</h2>
-        <div id="places" class="cards"></div>
-      </div>
-    </div>
-  </section>
+<section id="lieux" class="view">
+  <div class="map-wrap"><div id="map"></div><button id="enable-map" class="map-overlay">Activer la carte</button></div>
+  <div class="panel"><input id="global-search" placeholder="Rechercher un lieu, une plage, un village…"/>
+    <div id="search-results" class="cards"></div><h2 class="mt">Lieux à découvrir</h2><div id="places" class="cards small-img"></div></div>
+</section>
 
-  <section id="marches" class="view">
+<section id="marches" class="view">
+  <div class="map-wrap"><div id="map-markets"></div><button id="enable-map-markets" class="map-overlay">Activer la carte</button></div>
+  <div class="panel">
     <div class="filters">
-      <label>Jour
-        <select id="filter-jour">
-          <option value="Tous">Tous</option>
-          <option>Lundi</option><option>Mardi</option><option>Mercredi</option>
-          <option>Jeudi</option><option>Vendredi</option><option>Samedi</option><option>Dimanche</option>
-        </select>
-      </label>
-      <label>Zone
-        <select id="filter-zone">
-          <option value="Toutes">Toutes</option>
-          <option>Nord</option><option>Est</option><option>Sud</option><option>Ouest</option><option>Centre</option><option>Divers</option>
-        </select>
-      </label>
+      <label>Jour <select id="filter-jour"><option value="Tous">Tous</option><option>Lundi</option><option>Mardi</option><option>Mercredi</option><option>Jeudi</option><option>Vendredi</option><option>Samedi</option><option>Dimanche</option></select></label>
+      <label>Zone <select id="filter-zone"><option value="Toutes">Toutes</option><option>Nord</option><option>Est</option><option>Sud</option><option>Ouest</option><option>Tramuntana</option><option>Intérieur</option></select></label>
       <button id="btn-today">Voir les marchés aujourd'hui</button>
     </div>
-    <div id="markets" class="cards"></div>
-  </section>
+    <div id="markets" class="cards small-img"></div>
+  </div>
+</section>
 
-  <section id="fetes" class="view">
-    <div id="fetes-list" class="cards"></div>
-  </section>
+<section id="roadtrips" class="view">
+  <div class="map-wrap"><div id="map-trips"></div><button id="enable-map-trips" class="map-overlay">Activer la carte</button></div>
+  <div class="panel"><div id="trips" class="cards"></div></div>
+</section>
 
-  <section id="roadtrips" class="view">
-    <div id="trips" class="cards"></div>
-  </section>
+<section id="excursions" class="view">
+  <p class="note">Opéré par <strong>Evasion Authentic</strong>. WhatsApp : <a id="wa" href="#" target="_blank" rel="noopener"></a></p>
+  <div id="exc-list" class="cards small-img"></div>
+</section>
 
-  <section id="excursions" class="view">
-    <p class="note">Toutes les excursions sont opérées par <strong>Evasion Authentic</strong>. Concierge WhatsApp : <a id="wa" href="#" target="_blank" rel="noopener"></a></p>
-    <div id="exc-list" class="cards"></div>
-  </section>
+<section id="fetes" class="view"><div id="fetes-list" class="cards"></div></section>
 
-  <section id="conciergerie" class="view">
-    <div class="concierge">
-      <h2>Conciergerie gratuite</h2>
-      <p>Voilier 5h, cheval, jet-ski, quad, montgolfière, dégustations, bateau, dauphins… On s’occupe des réservations.</p>
-      <a id="wa2" class="cta" href="#" target="_blank" rel="noopener">Écrivez-nous sur WhatsApp</a>
-    </div>
-  </section>
+<section id="conciergerie" class="view">
+  <div class="concierge">
+    <h2>Conciergerie gratuite — simplicité totale</h2>
+    <ul class="value">
+      <li>Un seul WhatsApp : <strong>+34 618 688 798</strong></li>
+      <li>Réponse rapide, devis clair, paiement sécurisé</li>
+      <li>Réservation & organisation de A à Z (voilier 5h, cheval, quad, jet‑ski, montgolfière, dégustations, dauphins…)</li>
+      <li>Conseils sur le meilleur créneau (météo/affluence)</li>
+      <li>Support FR / ES / EN / DE</li>
+    </ul>
+    <a id="wa2" class="cta" href="#" target="_blank" rel="noopener">Écrivez-nous sur WhatsApp</a>
+  </div>
+</section>
 </main>
 
-<footer class="footer">
-  <small>© Evasion Authentic — Majorque. WhatsApp <span id="tel"></span></small>
-</footer>
+<footer class="footer"><small>© Evasion Authentic — Majorque. WhatsApp <span id="tel"></span></small></footer>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="js/data.js"></script>
-<script src="js/app.js"></script>
-</body>
-</html>
+<script src="js/app_v2.js"></script>
+</body></html>
