--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 
-<!DOCTYPE html><html lang="fr"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Evasion Authentic</title>
-<link rel="icon" href="assets/favicon.png" type="image/png">
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-<link rel="stylesheet" href="css/style.css"/></head>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Evasion Authentic</title>
+  <link rel="icon" href="assets/favicon.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <link rel="stylesheet" href="css/style.css"/>
+</head>
 <body>
-<header class="topbar"><div class="brand"><img src="assets/logo.svg" class="logo" alt="Evasion Authentic"/></div>
-<button class="burger" id="burger" aria-label="menu">☰</button>
-<nav id="nav" class="nav">
+<header class="topbar appbar">
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Evasion Authentic" class="logo"/>
+  </div>
+  <button class="burger" aria-label="menu" id="burger">☰</button>
+</header>
+
+<nav id="nav" class="tabbar">
   <a href="#accueil" data-tab="accueil" class="active">Accueil</a>
   <a href="#lieux" data-tab="lieux">Lieux</a>
   <a href="#marches" data-tab="marches">Marchés</a>
@@ -17,71 +26,119 @@
   <a href="#excursions" data-tab="excursions">Excursions</a>
   <a href="#fetes" data-tab="fetes">Fêtes</a>
   <a href="#conciergerie" data-tab="conciergerie">Conciergerie</a>
-</nav></header>
+</nav>
 
 <main>
-<section id="accueil" class="view active">
-  <div class="intro">
-    <h1>Majorque sans efforts, version authentique</h1>
-    <p>Road trips clés en main, cartes interactives, plus belles plages, points de vue, bonnes adresses. Marchés par jour (sur carte) et fêtes locales expliquées.</p>
-    <p><strong>Conciergerie gratuite</strong> pour toutes vos réservations (voilier 5h, cheval, quad, jet‑ski, montgolfière, dégustations, dauphins…). Un seul WhatsApp.</p>
-    <div class="links">
-      <a class="cta" href="#roadtrips">Voir les road trips</a>
-      <a class="cta ghost" href="#lieux">Explorer la carte & lieux</a>
-      <a class="cta ghost" href="#excursions">Nos excursions premium</a>
-      <a class="cta ghost" href="#conciergerie">Conciergerie gratuite</a>
+  <!-- ACCUEIL avec cartes de navigation -->
+  <section id="accueil" class="view active">
+    <div class="home-hero">
+      <h1>Evasion Authentic</h1>
+      <p>Votre guide & conciergerie à Majorque</p>
     </div>
-  </div>
-</section>
-
-<section id="lieux" class="view">
-  <div class="map-wrap"><div id="map"></div><button id="enable-map" class="map-overlay">Activer la carte</button></div>
-  <div class="panel"><input id="global-search" placeholder="Rechercher un lieu, une plage, un village…"/>
-    <div id="search-results" class="cards"></div><h2 class="mt">Lieux à découvrir</h2><div id="places" class="cards small-img"></div></div>
-</section>
-
-<section id="marches" class="view">
-  <div class="map-wrap"><div id="map-markets"></div><button id="enable-map-markets" class="map-overlay">Activer la carte</button></div>
-  <div class="panel">
-    <div class="filters">
-      <label>Jour <select id="filter-jour"><option value="Tous">Tous</option><option>Lundi</option><option>Mardi</option><option>Mercredi</option><option>Jeudi</option><option>Vendredi</option><option>Samedi</option><option>Dimanche</option></select></label>
-      <label>Zone <select id="filter-zone"><option value="Toutes">Toutes</option><option>Nord</option><option>Est</option><option>Sud</option><option>Ouest</option><option>Tramuntana</option><option>Intérieur</option></select></label>
-      <button id="btn-today">Voir les marchés aujourd'hui</button>
+    <div class="home-grid">
+      <a class="home-card" href="#roadtrips">
+        <img src="assets/photos/places/formentor-plage.jpg" alt="Road trips"><span>Road trips</span>
+      </a>
+      <a class="home-card" href="#lieux">
+        <img src="assets/photos/places/valldemossa.jpg" alt="Lieux"><span>Lieux</span>
+      </a>
+      <a class="home-card" href="#marches">
+        <img src="assets/photos/places/alcudia-remparts.jpg" alt="Marchés"><span>Marchés</span>
+      </a>
+      <a class="home-card" href="#excursions">
+        <img src="assets/photos/excursions/croisiere-voilier-palma.jpg" alt="Excursions"><span>Excursions</span>
+      </a>
+      <a class="home-card" href="#fetes">
+        <img src="assets/photos/places/palma-cathedral.jpg" alt="Fêtes locales"><span>Fêtes locales</span>
+      </a>
+      <a class="home-card" href="#conciergerie">
+        <img src="assets/photos/excursions/majorque-gastronomie-artisanat.jpg" alt="Conciergerie"><span>Conciergerie</span>
+      </a>
     </div>
-    <div id="markets" class="cards small-img"></div>
-  </div>
-</section>
+  </section>
 
-<section id="roadtrips" class="view">
-  <div class="map-wrap"><div id="map-trips"></div><button id="enable-map-trips" class="map-overlay">Activer la carte</button></div>
-  <div class="panel"><div id="trips" class="cards"></div></div>
-</section>
+  <!-- Lieux (inchangé) -->
+  <section id="lieux" class="view">
+    <div class="map-wrap">
+      <div id="map"></div>
+      <button id="enable-map" class="map-overlay">Activer la carte</button>
+    </div>
+    <div class="panel">
+      <input id="global-search" placeholder="Rechercher un lieu, une plage, un village…"/>
+      <div id="search-results" class="cards"></div>
+      <h2 class="mt">Lieux à découvrir</h2>
+      <div id="places" class="cards small-img"></div>
+    </div>
+  </section>
 
-<section id="excursions" class="view">
-  <p class="note">Opéré par <strong>Evasion Authentic</strong>. WhatsApp : <a id="wa" href="#" target="_blank" rel="noopener"></a></p>
-  <div id="exc-list" class="cards small-img"></div>
-</section>
+  <!-- Marchés -->
+  <section id="marches" class="view">
+    <div class="map-wrap">
+      <div id="map-markets"></div>
+      <button id="enable-map-markets" class="map-overlay">Activer la carte</button>
+    </div>
+    <div class="panel">
+      <div class="filters">
+        <label>Jour
+          <select id="filter-jour">
+            <option value="Tous">Tous</option>
+            <option>Lundi</option><option>Mardi</option><option>Mercredi</option>
+            <option>Jeudi</option><option>Vendredi</option><option>Samedi</option><option>Dimanche</option>
+          </select>
+        </label>
+        <label>Zone
+          <select id="filter-zone">
+            <option value="Toutes">Toutes</option>
+            <option>Nord</option><option>Est</option><option>Sud</option><option>Ouest</option><option>Tramuntana</option><option>Intérieur</option>
+          </select>
+        </label>
+        <button id="btn-today">Voir les marchés aujourd'hui</button>
+      </div>
+      <div id="markets" class="cards small-img"></div>
+    </div>
+  </section>
 
-<section id="fetes" class="view"><div id="fetes-list" class="cards"></div></section>
+  <!-- Roadtrips -->
+  <section id="roadtrips" class="view">
+    <div class="map-wrap">
+      <div id="map-trips"></div>
+      <button id="enable-map-trips" class="map-overlay">Activer la carte</button>
+    </div>
+    <div class="panel">
+      <div id="trips" class="cards"></div>
+    </div>
+  </section>
 
-<section id="conciergerie" class="view">
-  <div class="concierge">
-    <h2>Conciergerie gratuite — simplicité totale</h2>
-    <ul class="value">
-      <li>Un seul WhatsApp : <strong>+34 618 688 798</strong></li>
-      <li>Réponse rapide, devis clair, paiement sécurisé</li>
-      <li>Réservation & organisation de A à Z (voilier 5h, cheval, quad, jet‑ski, montgolfière, dégustations, dauphins…)</li>
-      <li>Conseils sur le meilleur créneau (météo/affluence)</li>
-      <li>Support FR / ES / EN / DE</li>
-    </ul>
-    <a id="wa2" class="cta" href="#" target="_blank" rel="noopener">Écrivez-nous sur WhatsApp</a>
-  </div>
-</section>
+  <!-- Excursions -->
+  <section id="excursions" class="view">
+    <p class="note">Opéré par <strong>Evasion Authentic</strong>. WhatsApp : <a id="wa" href="#" target="_blank" rel="noopener"></a></p>
+    <div id="exc-list" class="cards small-img"></div>
+  </section>
+
+  <!-- Fêtes -->
+  <section id="fetes" class="view"><div id="fetes-list" class="cards"></div></section>
+
+  <!-- Conciergerie -->
+  <section id="conciergerie" class="view">
+    <div class="concierge">
+      <h2>Conciergerie gratuite — simplicité totale</h2>
+      <ul class="value">
+        <li>Un seul WhatsApp : <strong>+34 618 688 798</strong></li>
+        <li>Réponse rapide, devis clair, paiement sécurisé</li>
+        <li>Organisation A→Z (voilier 5h, cheval, quad, jet‑ski, montgolfière, dégustations, dauphins…)</li>
+        <li>Conseils météo & affluence · FR/ES/EN/DE</li>
+      </ul>
+      <a id="wa2" class="cta" href="#" target="_blank" rel="noopener">Écrivez-nous sur WhatsApp</a>
+    </div>
+  </section>
 </main>
 
-<footer class="footer"><small>© Evasion Authentic — Majorque. WhatsApp <span id="tel"></span></small></footer>
+<footer class="footer">
+  <small>© Evasion Authentic — Majorque. WhatsApp <span id="tel"></span></small>
+</footer>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="js/data.js"></script>
-<script src="js/app_v2.js"></script>
-</body></html>
+<script src="js/app_v3.js"></script>
+</body>
+</html>
