--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <link rel="stylesheet" href="css/style.css"/></head>
 <body>
 <header class="topbar"><div class="brand"><img src="assets/logo.svg" class="logo" alt="Evasion Authentic"/></div></header>
+<nav class="topnav">
+  <a href="./index.html">Accueil</a>
+  <a href="./pages/lieux.html">Lieux</a>
+  <a href="./pages/marches.html">Marchés</a>
+  <a href="./pages/roadtrips.html">Road trips</a>
+  <a href="./pages/excursions.html">Excursions</a>
+  <a href="./pages/fetes.html">Fêtes</a>
+  <a href="./pages/conciergerie.html">Conciergerie</a>
+</nav>
+
 <main>
   <div class="home-hero">
     <h1>Evasion Authentic</h1>
