--- a/pages/conciergerie.html
+++ b/pages/conciergerie.html
@@ -7,8 +7,18 @@
 <link rel="stylesheet" href="../css/style.css"/></head>
 <body>
 <header class="topbar"><div class="brand"><a href="../index.html"><img src="../assets/logo.svg" class="logo" alt="Evasion Authentic"/></a></div></header>
+<nav class="topnav">
+  <a href="../index.html">Accueil</a>
+  <a href="../pages/lieux.html">Lieux</a>
+  <a href="../pages/marches.html">Marchés</a>
+  <a href="../pages/roadtrips.html">Road trips</a>
+  <a href="../pages/excursions.html">Excursions</a>
+  <a href="../pages/fetes.html">Fêtes</a>
+  <a href="../pages/conciergerie.html">Conciergerie</a>
+</nav>
+
 <main>
-  <h1>Conciergerie gratuite</h1>
+  <h1>Conciergerie gratuite</h1><p>Un seul échange WhatsApp, et on vous crée un plan sans friction : réservation, confirmation, billets, point de RDV, suivi.</p>
   <p>On simplifie tout : un message WhatsApp et on s’occupe du reste.</p>
   <div class="cards">
     <div class="card"><div class="pad"><h3>Ce qu’on réserve pour vous</h3><ul>
