--- a/pages/marches.html
+++ b/pages/marches.html
@@ -8,6 +8,16 @@
 <link rel="stylesheet" href="../css/style.css"/></head>
 <body>
 <header class="topbar"><div class="brand"><a href="../index.html"><img src="../assets/logo.svg" class="logo" alt="Evasion Authentic"/></a></div></header>
+<nav class="topnav">
+  <a href="../index.html">Accueil</a>
+  <a href="../pages/lieux.html">Lieux</a>
+  <a href="../pages/marches.html">Marchés</a>
+  <a href="../pages/roadtrips.html">Road trips</a>
+  <a href="../pages/excursions.html">Excursions</a>
+  <a href="../pages/fetes.html">Fêtes</a>
+  <a href="../pages/conciergerie.html">Conciergerie</a>
+</nav>
+
 <main>
   <h1>Marchés de Majorque</h1>
   <div class="map-wrap"><div id="map" class="map"></div><button id="enable-map" class="map-overlay">Activer la carte</button></div>
@@ -30,5 +40,14 @@ const list=document.getElementById('list'); const j=document.getElementById('jou
 function jf(d){return ['Dimanche','Lundi','Mardi','Mercredi','Jeudi','Vendredi','Samedi'][d]}
 function draw(){const jfilt=j.value, zf=z.value; const data=window.APP_DATA.markets.filter(m=>(jfilt==='Tous'||m.jour===jfilt)&&(zf==='Toutes'||m.zone===zf)); list.innerHTML=data.map(m=>`<div class="card"><div class="pad"><h3>${m.ville}</h3><div class="badge">${m.jour}</div><div class="badge">${m.zone}</div></div></div>`).join(''); layer.clearLayers(); data.forEach(m=>{const c=window.APP_DATA.coords[m.ville]||window.APP_DATA.coords[m.ville+' (Alcúdia)']||window.APP_DATA.coords[m.ville+' (Pollença)']; if(!c) return; L.marker([c.lat,c.lng]).addTo(layer).bindPopup(`<strong>${m.ville}</strong><br>${m.jour} — ${m.zone}`);});}
 j.onchange=z.onchange=draw; td.onclick=()=>{j.value=jf(new Date().getDay()); draw();}; draw();
+</script>
+
+<script>
+if(!window.APP_DATA){
+  const warn=document.createElement('p');
+  warn.style.color='#b91c1c';
+  warn.textContent='(Données introuvables : vérifiez que js/data.js est bien à la racine du site)';
+  document.currentScript.parentElement.appendChild(warn);
+}
 </script>
 </body></html>
